/*
 * $Id: ChangeLog,v 1.1601 2003/10/19 04:07:38 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-10-18 23:14 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/Whoo/source/TCustomForm.prg
  * contrib/Whoo/source/TForm.prg
  * contrib/Whoo/source/controls.prg
    ! Minor fixes.

2003-10-19 01:05 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tbrowse.prg
    ! Fix minor bug in initialization at first display.

2003-10-19 02:59 UTC+2000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/vm/thread.c
      ! Fixed windows compilation
   * tests/mterror.prg
      * Intestation more centered in the screen (;-).

2003-10-19 02:10 UTC+2000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * include/thread.h
   * source/vm/thread.c
   * source/vm/garbage.c
      + Added support for "Explicit idle inspecting". An idle inspector
        (a thread that knows that it is running alone with no other threads)
        won't be blocked when trying to acquire the lock on the stack;
        it will be considere "alone" if executing VM instructions, and
        all the MT cares will be dropped.


   * source/vm/hvm.c
      + Added support for GLOBAL vm termination request. When a thread
        terminates issuing a LOCAL termination request, as soon as this
        VM_QUIT request is fulfilled, the request is turned into a GLOBAL
        TERMINATION request, that forcess all other threads to cleaunp
        cleanly as soon as possible and terminates the main thread.
      + Added support for hb_vmQuit() called from non-main thread. In MT,
        when a thread calls hb_vmQuit() (generally because of an error),
        then it is cleanly terminated and a GLOBAL VM termination request
        is given. This will make the main thread to cleanly shut all the